--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.1",
     "axios": "^1.12.2",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
